--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,8 @@
 # where the inspected file is and continue its way up to the root directory.
 #
 # See https://docs.rubocop.org/rubocop/configuration
-
+require:
+  - rubocop-capybara
 AllCops:
   TargetRubyVersion: 3.1
   NewCops: disable
